[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4"

[[bin]]
path = "src/guessing-game/main.rs"
name = "guessing-game"

[[bin]]
path = "src/error-handling/main.rs"
name = "error-handling"

[[bin]]
path = "src/web-server/main.rs"
name = "web-server"

[[bin]]
path = "src/shapes/main.rs"
name = "shapes"
